loan_validator_portal/k8s-manifest/loan-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loan-validator-ns
  labels:
    name: loan-validator-ns
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
