loan_validator_portal/k8s-manifest/deny-all-loan.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loan-validator-deny-all
  namespace: loan-validator-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
