loan_validator_portal/k8s-manifest/loan-network.yaml
# Allow Loan Validator Portal to access Government API
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loan-validator-network-allow
  namespace: loan-validator-ns
spec:
  podSelector:
    matchLabels:
      app: loan-validator
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow traffic from ingress
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 8080
  # Allow health checks from kubelet
  - from:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 8080

  egress:
  # Allow outgoing traffic to postgres
  - to:
    - podSelector:
        matchLabels:
          app: postgres
          
    ports:
    - protocol: TCP
      port: 5432
  
  - to:
    - podSelector:
        matchLabels:
          app: government-api
    ports:
    - protocol: TCP
      port: 8081

  - to:
    - podSelector:
        matchLabels:
          app: otel

    ports:
    - protocol: TCP
      port: 4317
